--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SpaceX</title>
 
+  <!--Link Icon-->
+  <link rel="shortcut icon" href="./img/favIcon/favicon.ico" type="image/x-icon">
+
   <!-- Link css-->
   <link rel="stylesheet" href="./css/style.css">
 
